bug fix coins not visible

--- a/src/index.scss
+++ b/src/index.scss
@@ -449,8 +449,19 @@ code {
       box-shadow: 0 0 0 0 rgba(52, 152, 219, 0);
     }
   }
+  .cell-cize{
+    width: 10px!important;
+     height: 10px!important;
+  }
   
   @media only screen and (max-width: 600px) {
+    .cell-cize{
+      width: 7px!important;
+       height: 7px!important;
+    }
+    .all-home-coins-container{
+      right: 15%!important;
+    }
     .dice-button-container{
       justify-content: end;
       margin-left: 40%;
